?? ??? 2011, PHP 5.4.0 RC1
- General improvements:
  . Changed silent conversion of array to string to produce a notice. (Patrick)

- CLI SAPI:
  . Fixed bug #60112 (If URI does not contain a file, index.php is not served).
    (Laruence)
  . Fixed bug #60115 (memory definitely lost in cli server). (Laruence)
  . Fixed bug #60146 (Last 2 lines of page not being output). (Laruence)

- Core:
  . Fixed bug #60120 (proc_open's streams may hang with stdin/out/err when 
    the data exceeds or is equal to 2048 bytes). (Pierre, Pascal Borreli)
  . Fixed bug #60174 (Notice when array in method prototype error). Laruence

- Oracle Database extension (OCI8):
  . Increased maxium Oracle error message buffer length for new 11.2.0.3 size 
    (Chris Jones)

- SPL extension
  . Reverted changes that required constructor overrides to invoke the parent
    constructor in several SPL classes and applied 5.3 fixes instead.
    Related bugs: #54384, #55175 and #55300.

20 Oct 2011, PHP 5.4.0 beta2
- General improvements:
  . Improve the warning message of incompatible arguments. (Laruence) 
  . Improve ternary operator performance when returning arrays. (Arnaud, Dmitry)

- Core:
  . Fixed bug #55801 (Behavior of unserialize has changed). (Mike)
  . Fixed bug #55749 (TOCTOU issue in getenv() on Windows builds). (Pierre)
  . Fixed bug #55707 (undefined reference to `__sync_fetch_and_add_4' on Linux
    parisc). (Felipe)
  . Fixed bug #55705 (Omitting a callable typehinted argument causes a segfault).
    (Felipe, Laruence)
  . Fixed bug #55758 (Digest Authenticate missed in 5.4) . (Laruence)
  . Fixed bug #55622 (memory corruption in parse_ini_string). (Pierre)
  . Fixed bug #55825 (Missing initial value of static locals in trait methods).
    (Laruence)
  . Fixed bug #60038 (SIGALRM cause segfault in php_error_cb). (Laruence)

- Openssl
  . Revert r313616 (When we have a blocking SSL socket, respect the timeout